force-app/main/default/objects/Fee_Record__c/Fee_Record__c.object-meta.xml
<CustomObject>
    <label>Fee_Record</label>
    <nameField>
        <displayFormat>FRN-{0}</displayFormat>
        <label>Fee_Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee_Record</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>