force-app/main/default/objects/Fee_Record__c/fields/PayAmount__c.field-meta.xml
<CustomField>
    <fullName>PayAmount__c</fullName>
    <label>PayAmount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>