force-app/main/default/objects/Fee_Record__c/fields/PayDate__c.field-meta.xml
<CustomField>
    <fullName>PayDate__c</fullName>
    <label>PayDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>