force-app/main/default/objects/Fee_Record__c/validationRules/Payment_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Amount_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>PayAmount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Payment amount must be &gt; 0</errorMessage>
</ValidationRule>