force-app/main/default/objects/Fee_Record__c/validationRules/Payment_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>PayDate__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Payment Date cannot be the future date</errorMessage>
</ValidationRule>