force-app/main/default/objects/Fee_Record__c/validationRules/Payment_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Status_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    TEXT(Payment_Status__c) = &quot;Completed&quot;,
    PayAmount__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Payment Status cannot be “Completed” if amount = 0</errorMessage>
</ValidationRule>